# datamining-project-pub

./: Structure.txt  cli.py  pyproject.toml  readme.txt
Models/: KMEANS.py  KNN.py  ModelBuilder.py  Type1Bayes.py  Type1ID3Tree.py  Type2Bayes.py  Type2Tree.py
Utilities/: Discretizators.py  PDUtils.py
deprecated/: MainWindow.py  OpenFileDialog.py  gui.py  random_tests.py
deprecated/cnf_tests/: Per sample results for test data.csv  mtx_plot.ipynb  mtx_plot2.ipynb
