[tool.poetry]
name = "datamining-project"
version = "0.1.0"
description = ""
authors = ["Baruch Rutman"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.4"
PyQt5 = "^5.15.0"
sklearn = "^0.0"
joblib = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
